Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 20.02.2022 13:50:25</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.02.2022 06:10:30</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 20. 02. 2022</h5>
+<h5>Pondělí, 21. 02. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>OMLOUVÁME SE, ALE DNES 18.2. Máme zavřeno</strong>
@@ -36,9 +36,49 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 20.2.2022</div>
+<div class="nadpis">Pondělí 21.2.2022</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">
+<div class="polozka">Bramborový krém se žampiony v menu <em title="Mléko">7</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">Bramborový krém se žampiony samostatně <em title="Mléko">7</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí prso v red curry omáčce, grilovaná zelenina, basmati rýže, koriandr, smažená cibulka <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Zapečená vepřová pečeně modrým sýrem a olivami, šťouchané brambory, pórek, cherry rajčata <em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Bramborové gnocchi, omáčka z pečené řepy, cukrový hrášek, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>150g Okurkový salát</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">5. </span>80g Jogurtová bábovka</div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">6. </span>80g Kokosový košíček s bílou čokoládou</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -49,16 +89,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se sýrem a krutony</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">37,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Předkrm</h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr></tbody>
+<h5 class="border_box_title">Předkrm </h5><tr><td class="menuWeight">150g</td><td class="menuName">Gothajský salám z Maso Jičín s cibulí, octem a feferonkou, kváskový chléb</td><td class="menuPrice">49,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Moravský vrabec, bramborové knedlíky z tálu, dušené bílé zelí</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí pečeně na houbách, dušená jasmínová rýže</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí játra na grilu, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené čevabčiči, vařené brambory s máslem a šnitlíkem, cibule, hořčice</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, grilovaná karotka a grusetky, květákové pyré, vařené vejce</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny fusili se sušenými rajčaty a kukuřicí zjemněné smetanou, řezy z kuřecích prsou, parmazán</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Náš dvojitý burger 100g + 100g s listy salátů, šunkou, sýrem, cibulí, kyselou okurkou, beraním rohem a mexickým dresinkem, smažené bramborové plátky, tatarka</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát ochucený olivovým olejem, smažené kuřecí stripsy, vařené vejce</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">2 + 1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1 + 1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Medailonky z vepřové pečeně v těstíčku se sýrem 3ks, bramborová kaše s máslem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenský hovězí guláš s červenou cibulí a feferonkou, karlovarské a houskové knedlíky</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Lasagne s bolonským ragú a bešamelem, salát coleslav</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s hovězím masem, těstoviny kolínka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená vepřová žebra na česneku, bramborové knedlíky, špenát</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Pečená krůtí roláda plněná šunkou a sýrem, čínský zelný salát (černé houby, kapie, červená cibule)</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">Instapivo</td><td class="menuName">Pokud jsi stálý sledující naše instagramového profilu "senkyrna7", tak máš čepovaný Staropramen 11° 0,5L pouze za 26,-Kč neomezeně. Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu obsluze. Platí i pro odnos piva s sebou.</td><td class="menuPrice">26,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné žampionové omáčce, gratinované brambory se smetanou a sýrem</td><td class="menuPrice">143,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vinná klobása na grilu, brambory grenaile s plátky česneku, zeleninový salátek</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný hořčičným dresinkem, filírovaná vepřová panenka, vařené vejce</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">TOP</td><td class="menuName">Naše lívance s redukcí lesního ovoce se zakysanou smetanou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">2 + 1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1 + 1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na kuřecí steak se šunkou a smažený sýr za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -76,32 +113,33 @@
 <tbody>
 <tr>
 <td class="amount">150 g</td>
-<td class="title">Anglický roastbeef se salátem frissé s kaparovou majonézou
-		a rozpečenou bylinkovou bagetou 1a,3,7,10</td>
-<td class="pricem">185 Kč</td>
+<td class="title">Carpaccio z uzeného hovězího jazyka s naší nakládanou zeleninou,
+wasabi majonézou a domácím kmínovým chlebem 1ab,3,10</td>
+<td class="pricem">149 Kč</td>
 </tr>
 <tr>
 <td class="amount"></td>
-<td class="title">Polévka z červené čočky s kořenovou zeleninou, řapíkatým celerem,
-drcenými rajčaty a chorizo klobásou 1a,9</td>
-<td class="pricem">69 Kč</td>
+<td class="title">Kulajda s hříbky a pošírovaným vejcem 1a,3,7,9</td>
+<td class="pricem">75 Kč</td>
 </tr>
 <tr>
-<td class="amount">250 g</td>
-<td class="title">Grilované kuřecí prso Supreme s omáčkou z pečených paprik,
-		bramborovo hráškovým pyré a glazovanou mrkví 1a,7</td>
+<td class="amount">1/4</td>
+<td class="title">Pečené kachní stehno na kmíně s cibulovým zelím
+		a bramborovými špalíčky 1a,3,12</td>
 <td class="pricem">215 Kč</td>
 </tr>
 <tr>
-<td class="amount">150 g</td>
-<td class="title">Massaman curry s kousky lososa, zeleninou, zelenými fazolkami,
-		kokosovým mlékem a koriandrem s jasmínovou rýží 4,6</td>
-<td class="pricem">265 Kč</td>
+<td class="amount">250 g</td>
+<td class="title">SATAY: Grilovaný kuřecí špíz v marinádě ze sójové omáčky,
+limetek, kurkumy a koriandru s arašídovou omáčkou, nakládanými
+salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
+<td class="pricem">209 Kč</td>
 </tr>
 <tr>
 <td class="amount"></td>
-<td class="title">Domácí makovec s kaštanovým mascarpone 1a,3,7</td>
-<td class="pricem">89 Kč</td>
+<td class="title">Smažená jablka v mandlovém těstíčku s karamelovou omáčkou
+		1a,3,7,8a</td>
+<td class="pricem">85 Kč</td>
 </tr>
 </tbody>
 </table>
@@ -109,7 +147,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 </tr>
 <tr>
 <td>
-<table class="dm"></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Bramboračka s lesními houbami 1a,7,9</td><td class="pricem">39 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřová špikovaná pečeně na paprice s našimi houskovými knedlíky 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Kuřecí medailonky v parmazánovém těstíčku se šťouchanými brambory s anglickou slaninou a cibulkou a rajčatovým salátem 1a,3,7</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Špagety Aglio - Olio a peperoncino s restovanou pancettou, rukolou a sýrem Forte Classico 1a,3,7</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
