Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.02.2022 08:11:00</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.02.2022 08:33:37</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,10 +7,24 @@
 <h5>Pondělí, 21. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>OMLOUVÁME SE, ALE DNES 18.2. Máme zavřeno</strong>
+<strong>Vývar se zeleninou, kuřecím masem a nudlemi</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							0,-
+							35,-
+						</span>
+</p>
+<p>
+<strong>Rajská hovězí pečeně s houskovým knedlíkem nebo těstovinou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							135,-
+						</span>
+</p>
+<p>
+<strong>Kuřecí prsa s houbovo-slaninovou omáčkou a rýží</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							135,-
 						</span>
 </p>
 <p>
