--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.02.2022 10:12:29</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 21.02.2022 10:36:28</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -73,7 +73,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>300g Bramborové gnocchi, omáčka z pečené řepy, cukrový hrášek, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">3. </span>300g Špagety s omáčkou z pečené řepy, cukrový hrášek, parmazán <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
