--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.02.2022 08:34:41</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 22.02.2022 09:13:21</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Úterý, 22. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou, kuřecím masem a nudlemi</strong>
+<strong>Zeleninová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Rajská hovězí pečeně s houskovým knedlíkem nebo těstovinou</strong>
+<strong>Míchaný salát se smaženými tvarůžky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí prsa s houbovo-slaninovou omáčkou a rýží</strong>
+<strong>Vepřový španělsky ptáček s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -132,7 +132,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenou dyni a kaparami v olivovem oleji, dal ze zluteho hrachu se smazenou cibulkou a mungo klicky, salatek 139</li><li>Peceny filet z cerstve bile tresky s pecenou dyni a kaparami v olivovem oleji, dal ze zluteho hrachu se smazenou cibulkou a mungo klicky, salatek 169</li><li>Burrito s mexickym carnitas {trhane veprove} a goudou, pecene brambory, salatek {L} 139</li><li>Grilovane medailonky z irskeho hoveziho krku s houbovou omackou, pohanka se smazenou cibulkou, salatek 169</li><li>Indicke birjany z basmati ryze s pecenou dyni, lilky, kvetakem a sazenym vajickem, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s pecenymi rajcaty a ancovickovym dresinkem, gratinovane brambory, salatek 139</li><li>Chobotnice na recky zpusob {oktopus giganti plaki}  s maslovymi fazolemi v rajcatove omacce se zeleninou a bylinkami, ciabatta, salatek {L} 175</li><li>Malajsky hovezi rendang s kokosovym mlekem, limetkovymi listky a galangalem, jasminova ryze, salatek 139</li><li>Italske dynove rizoto s gorgonzolou a uzenym hovezim flank steakem, salatek 169</li><li>Zapecene lilky v rajcatove omacce plnene cockou s olivami, smazenou cibulkou a goudou, zeleninovy kuskus, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
