Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.02.2022 09:12:47</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 23.02.2022 09:38:22</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -172,7 +172,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z norskeho slede smazeny v tempura testicku, jasminova ryze, thajsky chilli dzem, salatek {L} 139</li><li>Peceny filet z cerstveho norskeho lososa se salsou z cerstvych rajcaty s kaparami a olivami, stouchane brambory s porkem, salatek z cervene repy s krenem 169</li><li>Grilovany kruti spiz teryiaki, jasminova ryze, cukemono z redkve a mrkve se zazvorem a spetkou chilli 139</li><li>Prsicka z divoke kachny „alla Cacciatora“ {na cervenem vine s paprikami, rajcaty, zampiony, divokym korenim a olivami}, bramborove halusky, salatek {L} 169 </li><li>Kvetakove placicky s petrzelkou a spetkou muskatu, stouchane brambory s porkem, tatarska omacka {L} 139</li></ol>
+<ol><li>Filet z norskeho slede smazeny v tempura testicku, psenicne nudle, thajsky chilli dzem, salatek {L} 139</li><li>Peceny filet z cerstveho norskeho lososa se salsou z cerstvych rajcaty s kaparami a olivami, stouchane brambory s porkem, salatek z cervene repy s krenem 169</li><li>Grilovany kruti spiz teryiaki, jasminova ryze, cukemono z redkve a mrkve se zazvorem a spetkou chilli 139</li><li>Prsicka z divoke kachny „alla Cacciatora“ {na cervenem vine s paprikami, rajcaty, zampiony, divokym korenim a olivami}, bramborove halusky, salatek {L} 169 </li><li>Kvetakove placicky s petrzelkou a spetkou muskatu, stouchane brambory s porkem, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
