Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.02.2022 08:33:56</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 24.02.2022 09:13:10</small><table >
 <table>
 <tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
 <tr>
@@ -129,7 +129,7 @@ salátovými okurkami a domácím NAAN chlebem 1a,3,5,6,7,10</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z norskeho slede smazeny v tempura testicku, psenicne nudle, thajsky chilli dzem, salatek {L} 139</li><li>Peceny filet z cerstveho norskeho lososa se salsou z cerstvych rajcaty s kaparami a olivami, stouchane brambory s porkem, salatek z cervene repy s krenem 169</li><li>Grilovany kruti spiz teryiaki, jasminova ryze, cukemono z redkve a mrkve se zazvorem a spetkou chilli 139</li><li>Prsicka z divoke kachny „alla Cacciatora“ {na cervenem vine s paprikami, rajcaty, zampiony, divokym korenim a olivami}, bramborove halusky, salatek {L} 169 </li><li>Kvetakove placicky s petrzelkou a spetkou muskatu, stouchane brambory s porkem, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny filet z cerstveho jihoceskeho kapra s citronem a francouzskym horcicnym maslem, bramborovy salat s bilou redkvi, cibulkou, zelenymi bylinkami a majonezou 139</li><li>Smazeny filet z cerstve bile tresky, bramborovy salat s bilou redkvi, cibulkou, zelenymi bylinkami a majonezou, citron {L} 169</li><li>Jamajske pikantni jerk stew s veprovym masem, bataty, paprikami, rajcaty a chilli, jasminova ryze 139</li><li>Grilovane jehneci kofte, okurkove tzatziki, zeleninovy pilaf z kulate ryze, salatek 165</li><li>Indicky dal z cervene cocky s rajcaty, panc phoron a sazenym vejcem, chlebove placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
